# NeuralEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
resources/shaders/: 1.vsps.hlsl  compile_shaders.py
resources/shaders/compiled/: 1.ps.cso  1.vs.cso
src/: CMakeLists.txt
src/a_main/: AppCallbacks.cpp  AppInput.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Timer.cpp  Timer.h  main.cpp
src/game/: Game.cpp  Game.h  ProcessInputs.cpp
src/graphics/: IRenderEngine.h  RenderSettings.h
src/graphics/d3d12/: CommonGraphicsHeaders.h  DX12Gui.cpp  DX12Initialize.cpp  DX12RenderApplication.cpp  DX12RenderEngine.cpp  DX12RenderEngine.h  DescriptorHeap.cpp  DescriptorHeap.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Resource.cpp  Resource.h  RootSignature.cpp  RootSignature.h  SceneManager.cpp  SceneManager.h  UploadBuffer.h  Utils.cpp  Utils.h
src/graphics/d3d12/classes/: Buffer.h  ComputePipeline.cpp  ComputePipeline.h  DescriptorHeap.h  GraphicsPipeline.h  ResourceManager.cpp  ResourceManager.h  Resources.h  RootSignature.cpp  RootSignature.h  SceneManager.cpp  SceneManager.h  Texture.h
src/graphics/d3d12/classes/ml/: ConvolutionLayer.cpp  ConvolutionLayer.h  ConvolutionLayersContainer.cpp  Layer.cpp  Layer.h  Model.cpp  Model.h
src/graphics/d3d12/classes/resource/: BufferAndTexture.cpp  BufferAndTexture.h  ConstantBuffer.cpp  ConstantBuffer.h  OnnxBuffer.h  OrtBuffer.cpp  OrtBuffer.h
src/graphics/d3d12/resource_manager/: ConstantBuffer.h  ResourceManager.cpp  ResourceManager.h  Texture.h
src/graphics/d3d12/shaders/: 1.vsps.hlsl  basic.vsps.hlsl  compile_shaders.py
src/graphics/d3d12/shaders/compiled/: 1.ps.cso  1.vs.cso  basic.ps.cso  basic.vs.cso
src/utils/: Camera.h  Float16Compressor.h  Macros.h  Utils.cpp  Utils.h  glfw_window.cpp  glfw_window.h  input_defenitions.h
